--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
+
 html::-webkit-scrollbar {
   display: none;
 }
@@ -7,4 +9,8 @@ html::-webkit-scrollbar {
   height: 100%;
   overflow-x: hidden;
   background-color: rgba(0, 0, 0, 1);
+}
+
+* {
+  outline: none !important;
 }
