--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -43,22 +43,27 @@
 }
 
 .secondRow2 {
+    width: 70%;
     background-color: transparent;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 6rem;
-    padding: 5rem 0;
+    padding: 2rem 0;
     flex-direction: column;
-    transform: scale(1.26);
+    transform: scale(1);
+    background-color: #a55c1b;
+    background-image: linear-gradient(315deg, #a55c1b 0%, #000000 74%);
 }
 
 .secondRow2-title {
+    font-size: 2rem;
     color: rgb(231, 227, 227);
+    padding-bottom: 3rem;
 }
 
 .secondRow2-cols {
-    padding: 0 0.5rem;
+    padding: 1.5rem 1.5rem;
     margin: 0;
 }
 
@@ -78,6 +83,7 @@
     width: 30% !important;
     transition: ease-in-out !important;
     margin-bottom: 3rem !important;
+    margin-top: 3rem !important;
 }
 
 .secondRow2-form-button:hover {
@@ -93,8 +99,9 @@
     text-align: center;
     color: rgba(231, 227, 227, 0.89);
     max-width: 40rem;
-    padding: 0;
+    padding: 3rem;
     margin-bottom: 9rem;
+    border-radius: 99999px;
 }
 
 .connecter>h3 {
@@ -102,34 +109,6 @@
     color: #5F4429;
 }
 
-/*-------------MASKS----------------*/
-.thirdRow2-mask1 {
-    position: absolute;
-    padding: 13.5rem 30rem;
-    background: rgba(236, 191, 146, 0.1);
-    border-radius: 99999px;
-}
-
-.thirdRow2-mask2 {
-    top: 25rem;
-    position: absolute;
-    padding: 6rem 25rem;
-    background: rgba(236, 191, 146, 0.05);
-    border-radius: 999999px;
-}
-
-.thirdRow2-mask3 {
-    top: 26.9rem;
-    position: absolute;
-    padding: 1rem 1rem;
-    background: rgba(236, 191, 146, 0.06);
-    border-radius: 100%;
-    display: none;
-}
-
-
-
-/*----------------------------------*/
 /*------------INPUT-ROOT-CSS------------*/
 .MuiInputBase-input {
     width: 100% !important;
@@ -168,58 +147,31 @@
 
 /*----------------------------------------*/
 /*-----------------------------MEDIA QUERY-------------------*/
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 1000px) {
+    .contact {
+        display: block;
+    }
+
     .secondRow2 {
-        transform: scale(0.3);
-        margin: -6rem 0;
-    }
-
-    .firstRow2 {
-        transform: scale(0.5);
-    }
-
-    .mask {
-        display: none;
-    }
-
-    .cols-text-content {
-        padding: 0;
-        margin: 0;
-    }
-
-    .secondRow2-cols {
-        padding: 0;
-        margin: 0;
+        width: fit-content;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 6rem;
+        padding: 1rem 2.8rem;
     }
 
     .secondRow2-title {
-        padding: 0 0;
+        font-size: 3rem;
+        padding-bottom: 3rem;
+    }
+
+    .secondRow2-cols {
+        padding: 1rem 0;
         margin: 0;
     }
 
-    .thirdRow2 {
-        padding: 0;
-        margin: -5rem 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        transform: scale(0.7);
-    }
-
-    .thirdRow2-cols {
-        padding: 0;
-        margin: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-    }
-
-    .thirdRow2-mask1,
-    .thirdRow2-mask2,
-    .thirdRow2-mask3 {
-        display: none;
-
+    .secondRow2-form-button {
+        padding: 0.5rem 8rem !important;
     }
 }
