--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,64 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,700");
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 
+
 .home {
     background: url("https://i.ibb.co/P6VMvXr/home-Background2-1.jpg") no-repeat center;
     background-size: cover;
-    padding-bottom: 0rem;
 }
 
-/*-------------------------------------- NAVBAR SECTION beganning------------------------------------------------*/
-.navBar {
-    background-color: transparent;
-    font-family: "Montserrat", sans-serif;
-}
-
-.navItems {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.nav-link {
-    color: rgba(255, 255, 255, 0.925);
-    padding: 0 3rem;
-    font-size: 0.7rem;
-}
-
-.navBarBrand-img {
-    width: 3.55rem;
-    height: 3.55rem;
-    opacity: 0.9;
-}
-
-.nav-link:hover {
-    color: rgba(255, 255, 255, 0.925);
-}
-
-.navbar-toggler {
-    background-color: rgba(255, 255, 255, 0.295) !important;
-}
-
-@media screen and (max-width: 1100px) {
-    .navBarBrand {
-        display: none;
-    }
-
-    .nav-link {
-        padding: 1rem 0;
-    }
-
-    .nav-link:hover {
-        color: rgb(255, 255, 255) !important;
-    }
-
-    .navItems {
-        display: inline;
-    }
-}
-
-/*-------------------------------------- NAVBAR SECTION ending------------------------------------------------*/
-/*-------------------------------------- HOME SECTION beganning------------------------------------------------*/
 .home-section {
     padding-bottom: 11.25rem;
     display: flex;
@@ -70,10 +18,11 @@
 .home-title {
     font-family: "Montserrat", sans-serif;
     text-align: center;
-    padding-top: 10.5rem;
+    padding-top: 11rem !important;
     color: rgba(255, 255, 255, 0.918);
-    font-size: 5rem;
+    font-size: 4rem;
     font-weight: 600;
+    padding: 0 1rem;
 }
 
 .home-subtitle-col {
@@ -84,10 +33,9 @@
 
 .home-subtitle {
     font-family: "Montserrat", sans-serif;
-    text-shadow: 0.8px 0.8px 0.8px rgba(0, 0, 0, 0.568);
     text-align: center;
     color: rgba(216, 216, 216, 0.904);
-    font-size: 1.1rem;
+    font-size: 1rem;
     max-width: 40rem;
     padding: 0;
 }
@@ -98,3 +46,31 @@
 }
 
 /*-------------------------------------- HOME SECTION ending------------------------------------------------*/
+/*-------------------------------------- MEDIA QUERIES------------------------------------------------*/
+
+@media screen and (max-width: 1000px) {
+    .home {
+        background: url("https://i.ibb.co/P6VMvXr/home-Background2-1.jpg") no-repeat bottom;
+        background-size: cover;
+    }
+
+    .home-title {
+        padding-top: 5rem !important;
+        font-size: 2rem;
+    }
+
+    .home-section {
+        padding-bottom: 0rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .home-subtitle {
+        font-size: 0.8rem !important;
+        max-width: 20rem !important;
+        padding: 1rem 1.5rem;
+
+    }
+}
