--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -3,26 +3,33 @@
 
 
 /*-------------------------------------- NAVBAR SECTION beganning------------------------------------------------*/
+button {
+    outline: none !important;
+}
+
 .navBar {
     background-color: transparent;
     font-family: "Montserrat", sans-serif;
 }
 
-.navItems {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
 .nav-link {
     color: rgba(255, 255, 255, 0.925);
-    padding: 0 3rem;
     font-size: 0.7rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 1.5rem !important;
+
+}
+
+.navbar-brand {
+    margin: 0 !important;
 }
 
 .navBarBrand-img {
-    width: 3.55rem;
-    height: 3.55rem;
+    width: 3.3rem;
+    height: 3.3rem;
     opacity: 0.9;
 }
 
@@ -31,25 +38,20 @@
 }
 
 .navbar-toggler {
-    background-color: rgba(255, 255, 255, 0.295) !important;
+    margin-top: 0.2rem !important;
+    border-radius: 100%;
+    padding: 0.3rem 0.3rem !important;
+
+
 }
 
-@media screen and (max-width: 1100px) {
-    .navBarBrand {
-        display: none;
-    }
+.navbar-light .navbar-toggler-icon {
+    outline: none;
+    background-image: url("data:image/svg+xml,<svg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'><path stroke='rgba(255,255,255, 0.8)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/></svg>") !important;
+}
 
-    .nav-link {
-        padding: 1rem 0;
-    }
-
-    .nav-link:hover {
-        color: rgb(255, 255, 255) !important;
-    }
-
-    .navItems {
-        display: inline;
-    }
+.navBarBrand2 {
+    display: none;
 }
 
 .aboutLink,
@@ -58,3 +60,55 @@
     text-decoration: none !important;
     color: white !important;
 }
+
+.navbar-bootstrapNavbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.navItems {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+@media screen and (max-width: 1200px) {
+    .navItems {
+        display: flex !important;
+        justify-content: space-between !important;
+        align-items: flex-start !important;
+    }
+
+    .navBarBrand-img {
+        width: 2.5rem;
+        height: 2.5rem;
+        opacity: 0.9;
+    }
+
+    .navBarBrand {
+        display: none;
+    }
+
+    .navBarBrand2 {
+        display: flex;
+    }
+
+    .nav-link:hover {
+        color: rgb(255, 255, 255) !important;
+    }
+
+    .nav-link {
+        color: rgba(255, 255, 255, 0.925);
+        font-size: 0.7rem;
+        display: block;
+        padding: 0.5rem 0rem !important;
+    }
+
+}
+
+
+
+/*-------------NAVBAR ROOT CSS----------------*/
